<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_description"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="8dp"
        />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">
        <RadioButton
            android:id="@+id/spam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spam"/>

        <RadioButton
            android:id="@+id/wrong_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wrong_price"/>

        <RadioButton
            android:id="@+id/wrong_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wrong_category"/>

        <RadioButton
            android:id="@+id/prepayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prepayment"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment"
        android:layout_margin="8dp"/>

    <EditText
        android:id="@+id/report_description"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/custom_bg"
        android:gravity="top"
        android:inputType="textMultiLine|textCapSentences"
        android:padding="10dp" />


    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:background="@drawable/button_offer"
        android:text="@string/submit"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/learn_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/violation_link"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"/>



</LinearLayout>