<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.settings.ChangePasswordActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        app:cardElevation="2dp"
        app:contentPadding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/back"
                android:layout_width="@dimen/toolbar_icon_size"
                android:layout_height="wrap_content"
                android:onClick="goBack"
                android:contentDescription="@string/go_backk"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/page_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:text="@string/change_password"
                android:textColor="@color/colorPrimaryDark"
                android:layout_toEndOf="@+id/back"
                android:textSize="20sp" />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            app:passwordToggleEnabled="true"
            android:background="@drawable/custom_bg"
            android:textColorHint="@color/colorAccent"
            android:hint="@string/current_password"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

   <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            app:passwordToggleEnabled="true"
            android:background="@drawable/custom_bg"
            android:textColorHint="@color/colorAccent"
            android:hint="@string/new_password"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

   <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmNewPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            app:passwordToggleEnabled="true"
            android:background="@drawable/custom_bg"
            android:textColorHint="@color/colorAccent"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goToForget"
        android:text="@string/forgot_your_password"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:onClick="saveChanges"
        android:background="@drawable/button_offer"
        android:text="@string/save_changes"
        android:textColor="@color/colorPrimary" />


</LinearLayout>