<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        app:cardElevation="2dp"
        app:contentPadding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/back"
                android:layout_width="@dimen/toolbar_icon_size"
                android:layout_height="wrap_content"
                android:onClick="goBack"
                android:contentDescription="@string/go_backk"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/page_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:text="@string/pick_location"
                android:textColor="@color/colorPrimaryDark"
                android:layout_toEndOf="@+id/back"
                android:textSize="20sp" />




        </RelativeLayout>


    </androidx.cardview.widget.CardView>
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        tools:context=".MapsActivity" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/listPlaces"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"/>

        <com.ldoublem.loadingviewlib.view.LVCircularZoom
            android:id="@+id/progress"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_margin="5dp" />

        <TextView
            android:id="@+id/progressText"
            android:layout_below="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searching_for_your_location"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

</LinearLayout>